--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jotai": "^2.6.4",
     "lucide-react": "^0.320.0",
     "next": "14.1.0",
+    "next-pwa": "^5.6.0",
     "openai": "^4.26.0",
     "prisma": "^5.9.1",
     "react": "^18",
